# pipe-tools

./: .dockerignore  .gitignore  .travis.yml  CHANGES.md  Dockerfile  README.md  cloudbuild.yaml  docker-compose.yml  pickle-json-perf-test.py  setup.cfg  setup.py
pipe_tools/: __init__.py  __main__.py  timestamp.py
pipe_tools/airflow/: __init__.py  config.py  dataflow_operator.py  models.py
pipe_tools/beam/: requirements.py
pipe_tools/coders/: __init__.py  jsoncoder.py
pipe_tools/cookbook/: pipeline_options.py  pipeline_options_args.txt  query-8k-rows-2-fields.sql  read_bigquery.py  read_bigquery_args_local.txt  read_bigquery_args_remote.txt  read_write_bigquery.py  runall.sh  schema_autodetect.py  write_bq_date_partitions.py  write_bq_date_sharded.py  write_bq_date_sharded_args.txt  write_date_partitions.py
pipe_tools/generator/: __init__.py  generator.py
pipe_tools/io/: __init__.py  bigquery.py  bqdatepartitionedsink.py  bqdateshardedsink.py  datepartitionedsink.py  idpartitionedsink.py  keypartitionedsink.py  partitionedsink.py  scheme.py
pipe_tools/options/: __init__.py  actions.py  logging_options.py  validate.py
pipe_tools/transforms/: util.py
pipe_tools/utils/: __init__.py  test.py  timestamp.py  uuid.py
tests/: conftest.py  test_airflow.py  test_bigquery.py  test_coders.py  test_cookbook.py  test_datepartitionedsink.py  test_deleteme.py  test_generator.py  test_idpartitionedsink.py  test_io_gcp.py  test_keypartitionedsink.py  test_options.py  test_timestamp.py  test_utils.py
tests/airflow/: conftest.py  test_airflow.py
(+17 files in other folders)
