[metadata]
name = pipe-tools
version = 4.0.0
license = Apache-2.0
description = Generic tools for writing apache beam pipelines at GFW
long_description = file: README.md
long_description_content_type = text/markdown
author = Paul Woods
author_email = paul@globalfishingwatch.org
url = https://github.com/GlobalFishingWatch/pipe-tools

[options]
python_requires = >=3.7
zip_safe = True
packages = find:
install_requires = 
  newlinejson
  udatetime
  ujson
  six
  apache-beam[gcp]

[options.packages.find]
exclude=tests

[options.extras_require]
test = 
  pytest
  mock
